# Euler

./: .project  .pydevproject  CMakeLists.txt  README
19/: CMakeLists.txt  a.out  main.cpp
20/: CMakeLists.txt  bignum.h  main.cpp
21/: CMakeLists.txt  main.cpp
22/: CMakeLists.txt  main.cpp
23/: CMakeLists.txt  main.cpp
24/: CMakeLists.txt  main.cpp
25/: CMakeLists.txt  main.cpp
26/: CMakeLists.txt  main.cpp
27/: CMakeLists.txt  main.cpp
28/: CMakeLists.txt  main.cpp
29/: CMakeLists.txt  main.cpp
30/: CMakeLists.txt  main.cpp
31/: CMakeLists.txt  main.cpp
32/: CMakeLists.txt  main.cpp
33/: CMakeLists.txt  main.cpp
96/: CMakeLists.txt  board.cpp  board.h  main.cpp
97/: CMakeLists.txt  main.cpp
ex/: CMakeLists.txt  main.cpp
src/euler/: 36.py  38.py  41.py  42.py
